--- a/other-service/src/main/resources/application.yaml
+++ b/other-service/src/main/resources/application.yaml
@@ -1,2 +1,8 @@
 server:
-  port: 8081
+  port: 8082
+spring:
+  application:
+    name: costumer
+  cloud:
+    nacos:
+      server-addr: 101.37.20.199:8848
