--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -4,8 +4,14 @@ spring:
     url: jdbc:mysql://localhost:3306/crm?serverTimezone=GMT%2B8
     username: root
     password: issyu153
-
+  application:
+    name: provider
+  cloud:
+    nacos:
+      server-addr: 101.37.20.199:8848
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+server:
+  port: 8081
